# conecta-volei-backend-lab

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 49d804a86c37_create_games_table.py  4ab5bc9c79da_create_players_table.py  a1f2b3c4d5e6_add_player_role.py  b2c3d4e5f6a7_create_audit_logs_table.py  c3d4e5f6a7b8_create_game_teams_table.py  d545fcee814f_create_game_registrations_table.py
app/: main.py
app/api/: router.py
app/api/v1/: audit_logs.py  auth.py  games.py  players.py  registrations.py  router.py  system.py  teams.py
app/core/: cache.py  config.py  database.py  errors.py  messaging.py  metrics.py  security.py
app/domain/: constants.py  game_rules.py  player_rules.py  team_draw.py
conecta_volei_backend_lab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: api-examples.md
observability/: prometheus.yml
scripts/: consume_registration_events.py  seed_demo.py
tests/: conftest.py  test_api_modules.py  test_database_config.py  test_docker_compose.py  test_dockerfile.py  test_games_cache.py  test_health.py  test_metrics.py  test_prometheus_config.py
tests/api/: conftest.py  test_audit_logs.py  test_auth.py  test_game_teams.py  test_games.py  test_guest_registrations.py  test_modules.py  test_player_warnings.py  test_players.py  test_registrations.py  test_teams.py
tests/domain/: test_game_rules.py  test_player_rules.py  test_team_draw.py
tests/modules/: test_registration_events.py
(+28 files in other folders)
